fix: fall back to the defaults when the resource policy config is empty